FIX: Cambios en las traducciones y mejora de código.